STELLA, CHANGES


#### 0.7.2 (2009-10-29) ###############################

* FIXED: bin/stella exits with 1 if any request fails. 
* CHANGE: sequential and rsequential resourcing is now global
  across all clients. 
* ADDED: Assume HTTP response codes >= 400 are failed requests 
  unless a response block is defined for that status in which 
  case the block must return fail. 
* ADDED: Support for HTTP Basic authentication
* ADDED: Templating for resources parameters and headers. 
* ADDED: Built-in variable :HOSTNAME can be overriden by CLI argument. 
* ADDED: Automatic JSON parsing in response blocks (as 'doc')


#### 0.7.1 (2009-10-21) ###############################

NOTE: Complete rewrite. Features include:

* New internal architecture. 
* Improved stability and output for high thread loads. 
* Updated configuration syntax
* Granular reporting via Benelux


#### 0.6.0 (2009-03-15) ###############################

http://github.com/solutious/stella/tree/0.6

* COMPLETE REWRITE!
  * The commands and API from 0.5.x are no longer supported. This ain't your grandmother's Stella.
* NEW: Tests are now defined using a DSL. See tryouts/dsl_tryout.rb for an example. 
* NEW: Tests are run with Ruby directly: ruby testplan.rb (for now)


#### 0.5.6 (2009-02-04) ###############################

* API Change: watch is replaced by pcap and proxy. 
  * "stella watch -C" is now "stella pcap"
  * "stella watch -P" is now "stella proxy"
* Fixed body printing bug for stella -v watch -C
* Added adapter tests 
* Improved RDocs


#### 0.5.5 (2009-01-14) ###############################

http://github.com/solutious/stella/tree/stella-0.5.5

* Now has specs (33 specifications, 303 requirements)
* New dependency: test-spec (development copy only)
* Added delano/drydock to vendor (was delano/frylock). 
* Improved argument handling for load tool adapters (httperf not complete)
* Re-built Stella::Storable and subclasses (now using "field" method)
* Test::Stats, Test::Run::Summary cleanup